--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^5.2.13"
   },
   "dependencies": {
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1"
   }
 }
